# lastplay

./: .Dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  rust.yml
src/: db.rs  dbupdate.rs  main.rs  process_artists.rs  spotify_auth.rs
