[package]
name = "lastplay"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.13", features = ["derive"] }
deadpool-redis = "0.15.1"
dotenv = "0.15.0"
lazy_static = "1.5.0"
once_cell = "1.19.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
redis = { version = "0.25", features = ["aio"] }
reqwest = {version = "0.12.5", features = ["json"] }
rusqlite = "0.32.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
tokio-util = "0.7.11"
urlencoding = "2.1.3"
